_scss/components/_component-lists.scss
@mixin bullet($color) {
  content: "\2022";
  color: $color;
  display: inline-block;
  font-size: 3rem;
  line-height: 9px;
  width: 1rem;
  height: 1rem;
  margin-left: -1rem;
  vertical-align: middle;
}

.list-bullet {
	li {
      list-style: none;
		&:before {
          @include bullet($color-semi);
        }
		ul li {
          &:before {
            @include bullet($color-support);
          }
		}
	}
}
li.list-bullet--disabled {
    list-style-image: url(/img/bullet--disabled.svg);
}

.list-ui {
	li {
		list-style: none !important;
    }
    .sub-menu {
        font-weight: bold;
    }
    .sub-menu-item {
        margin: 0 0 0 1.75rem;
        padding-bottom: 0;
    }
}

.list-ui-hor {
	li {
		display: inline-block;
		&:not(:last-of-type) {
			margin-right: $scale-1;
		}
	}
}

.article {
    li {
    	list-style-position: outside;
		margin-left: -.25em;
		padding-left: .25em;
		ul {
    		margin-top: .5em;
		    li {		
    		    list-style-image: url(/img/bullet-nested.svg);
                margin-left: 1em;
            }
		}
    }
	ul li {
		list-style: none;
		list-style-image: url(/img/bullet.svg);
	}
    table {
        margin-bottom: 2em;
    }
    li li {
        margin-left: 1em;
    }
    ol, .list-ordered {
        padding-top: 1rem;
        padding-bottom: 1rem;
    	counter-reset: li;
    	list-style: none;
    	> li {
        	counter-increment: li; 
        	list-style-image: none !important;
            &:before {
                color: $color-semi;
            	content: counter(li);
                display: inline-block;
                font-weight: 700;
                margin: 0 .5em 0 -1.5em;
                text-align: right;
                width: 1em;
            }
        }
    }
}

dt {
    font-size: 1.25rem;
    font-weight: 500;
    padding-right: .75em;
}
dd {
    font-size: 1.15rem;
    margin-top: .1em;
    p {
        font-size: 1.15rem;
    }
}

@media screen and (min-width: 42em) {
    .def-list {
        align-items: flex-start;
        display: flex;
        flex-wrap: wrap;
        dt {
            width: 40%;
        }
        dd {
            width: 60%;
        }
    }
}

.bullet-rtp-olive {
    li {
        list-style-image: url(/img/bullet-rtp-olive.svg);
    }
}

.bullet-rtp-green {
    li {
        list-style-image: url(/img/bullet-rtp-green.svg);
    }
}

.list-benefits {
  list-style-type: none;

  li {
    list-style: none;
  }
}

